--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic==1.16.2",
+    "asyncpg>=0.30.0",
     "fastapi[standard]==0.115.14",
+    "pydantic-settings==2.10.1",
     "sqlalchemy[asyncio]==2.0.41",
 ]
 
